# django_territorial

./: .gitignore  Makefile  docker-compose.yaml
django_territorial/: Dockerfile  manage.py  pyproject.toml
django_territorial/django_territorial/: asgi.py  settings.py  urls.py  wsgi.py
django_territorial/territorial/: apps.py  consumers.py  models.py  routing.py  urls.py  views.py
django_territorial/territorial/services/: game.py  map.py
django_territorial/territorial/static/css/: styles.css
django_territorial/territorial/static/js/: app.js
django_territorial/territorial/static/js/components/: App.js  Canvas.js
django_territorial/territorial/static/js/utils/: AppContext.js  pixiHelpers.js  pixieHelpers.js  websocket.js
django_territorial/territorial/templates/: index.html
django_territorial/territorial/tests/: generate_game_states.py  performance_test.py
