[tool.poetry]
name = "django-territorial"
version = "0.1.0"
description = ""
authors = ["Anko59 <jeancollette138@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
numpy = "^2.1.1"
djangorestframework = "^3.15.2"
pydantic = "^2.9.2"
channels = "^4.1.0"
daphne = "^4.1.2"
loguru = "^0.7.2"
scipy = "^1.14.1"
opensimplex = "^0.4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
